@@ -1,0 +1,11 @@
+format_version "1"
+
+dir ""
+
+   file "otherfile"
+content [db19801f1850d7d85114e6c3f80d019f5bdb804a]
+   attr "mtn:execute" "true"
+
+   file "testfile"
+content [aed28f362beb27308db048db953a985fba45d8e7]
+   attr "mtn:execute" "true"
